k8s/ingress/ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
      args:
        - /nginx-ingress-controller 
        - --configmap=${POD_NAMESPACE}/nginx-configuration
      ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
  ---
  apiVersion: v1
  kind: Service
  metadata:
    name: nginx-ingress
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
    selector: 
    name: nginx-ingress

# Addition to this nginx has its intelligence 
# to monitor k8s cluster and configure underline nginx server when smething is changes
# To do this it requires serviceAccouunt with right set of permission (roles, cluster roles, rolebindings)
