k8s/ingress/ingress-resources.yaml
# set of rules applied over ingress-controller

# ingress-wear.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  backend: 
    serviceName: wear-service
    servicePort: 80

# multiple routes
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - http:
      paths:
      - path: /wear
        backend: 
          serviceName: wear-service
          servicePort: 80
      - path: /watch
        backend: 
          serviceName: watch-service
          servicePort: 80

# different domain names
# multiple routes
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - host: wear.my-online-store.com
    http:
      paths:
      - backend: 
          serviceName: wear-service
          servicePort: 80
  - host: watch.my-online-store.com
    http: 
      paths: 
      - backend: 
          serviceName: watch-service
          servicePort: 80
